--- a/css/font/binggrae-demo.html
+++ b/css/font/binggrae-demo.html
@@ -66,7 +66,7 @@
 
             </style>
 
-    <title>Binggrae Bold Specimen</title>
+    <title>Binggrae Regular Specimen</title>
 
 
     <script type="text/javascript" charset="utf-8">
@@ -79,7 +79,7 @@
 <body>
 <div id="container">
     <div id="header">
-		Binggrae Bold    </div>
+		Binggrae Regular    </div>
     <ul class="tabs">
         <li><a href="#specimen">Specimen</a></li>
         <li><a href="#layout">Sample Layout</a></li>
@@ -182,7 +182,7 @@
                     <div class="georgiabody">body</div>
                 </div>
                 <div class="fontbody" style="z-index:1">
-                    body<span>Binggrae Bold</span>
+                    body<span>Binggrae Regular</span>
                 </div>
                 <div class="arialbody" style="z-index:1">
                     body<span>Arial</span>
@@ -380,11 +380,11 @@
                 <div class="grid12 firstcol">
 
                     <h1>Language Support</h1>
-                    <p>The subset of Binggrae Bold in this kit supports the following languages:<br/>
+                    <p>The subset of Binggrae Regular in this kit supports the following languages:<br/>
 
 						English, Arrernte, Bislama, Cebuano, Fijian, Gilbertese, Hmong, Ibanag, Iloko_ilokano, Interglossa_glosa, Interlingua, Lojban, Norfolk_pitcairnese, Oromo, Rotokas, Seychelles_creole, Shona, Somali, Southern_ndebele, Swahili, Swati_swazi, Tok_pisin, Warlpiri, Xhosa, Zulu, Latinbasic, Ubasic, Demo                    </p>
                     <h1>Glyph Chart</h1>
-                    <p>The subset of Binggrae Bold in this kit includes all the glyphs listed below. Unicode entities are included above each glyph to help you insert individual characters into your layout.</p>
+                    <p>The subset of Binggrae Regular in this kit includes all the glyphs listed below. Unicode entities are included above each glyph to help you insert individual characters into your layout.</p>
                     <div id="glyph_chart">
 
 																				                                <div><p>&amp;#32;</p>&#32;</div>
