--- a/index.html
+++ b/index.html
@@ -1,119 +1,37 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- SEO -->
-    <meta name="title" content="빙그레" />
-    <meta
-      name="description"
-      content="다양한 맛과 행복으로 모두 하나되는 세상"
-    />
-    <meta name="robots" content="noodp" />
-    <meta name="NaverBot" content="All" />
-    <meta name="NaverBot" content="index, follow" />
-    <meta name="Yeti" content="All" />
-    <meta name="Yeti" content="index, follow" />
-    <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="빙그레" />
-    <meta
-      property="og:description"
-      content="다양한 맛과 행복으로 모두 하나되는 세상"
-    />
-    <meta property="og:url" content="https://www.bing.co.kr/" />
-    <meta
-      property="og:image"
-      content="http://bing.musign.net/img/main/og_img_binggrae.jpg"
-    />
-    <meta property="og:site_name" content="binggrae" />
-    <meta name="twitter:title" content="빙그레" />
-    <meta
-      name="twitter:description"
-      content="다양한 맛과 행복으로 모두 하나되는 세상"
-    />
-    <!-- favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="images/icon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="images/icon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="images/icon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="images/icon/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="images/icon/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <title>빙그레</title>
-    <!-- jQuery -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.1.min.js"
-      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-      crossorigin="anonymous"
-    ></script>
-    <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-    <![endif]-->
-    <script src="js/prefixfree.min.js"></script>
-    <!-- Respose -->
-    <script src="js/respond.min.js"></script>
-
-    <link rel="stylesheet" href="css/normalize.css" />
-    <!-- fontello -->
-    <link rel="stylesheet" href="css/fontello/css/fontello.css" />
-    <!-- fontawsome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <title>Document</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="wrap">
       <!-- 상단 -->
-      <header class="header">
-        <div class="inner"></div>
-      </header>
+      <header class="header"></header>
       <!-- 비주얼 -->
-      <section class="visual">
-        <div class="inner"></div>
+      <section class="visual"></section>
+      <!-- 슬라이더 -->
+      <section class="notice"></section>
+      <!-- 고객센터 및 FAQ-->
+      <section class="cs">
+        <div class="cs-top">
+          <div class="top-email"></div>
+          <div class="top-call"></div>
+        </div>
+        <div class="cs-bottom">
+          <div class="faq">
+            <div class="faq-left"></div>
+            <div class="faq-right"></div>
+          </div>
+        </div>
       </section>
-      <!-- 상품소개 -->
-      <section class="item">
-        <div class="inner"></div>
-      </section>
-      <!-- 브랜드관 -->
-      <section class="brand">
-        <div class="inner"></div>
-      </section>
-      <!-- 고객문의 -->
-      <section class="faq">
-        <div class="inner"></div>
-      </section>
-      <!-- 리포트 -->
-      <section class="report">
-        <div class=""></div>
-      </section>
+      <!-- 제보 -->
+      <section class="report"></section>
       <!-- 하단 -->
-      <footer class="footer">
-        <div class="inner"></div>
-      </footer>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
