--- a/index.html
+++ b/index.html
@@ -86,14 +86,60 @@
     </head>
     <body>
         <div class="wrap">
-            <!-- 상단 -->
-            <header class="header">
-                <div class="inner"></div>
-            </header>
-            <!-- 비주얼 -->
-            <section class="visual">
-                <div class="inner"></div>
-            </section>
+           <!--상단  -->
+      <header class="header">
+        <div class="header-inner">
+          <div class="header-top">
+            <a href="#" class="buy clearfix">
+              <img
+                src="../bing/images/link_arrow02 (2).png"
+                alt="구매포털 시스템"
+              />
+            </a>
+            <a href="#" class="job clearfix">
+              <img src="../bing/images/link_arrow01 (4).png" alt="인재채용" />
+            </a>
+          </div>
+          <hr />
+          <div class="header-bottom">
+            <div class="header-bottom-inner">
+            <a href="index.html" class="logo">로고
+            <img src="../bing/images/mstile-150x150.png" alt="빙그레" /></a>
+         
+
+            <nav class="nav">
+              <ul class="gnb">
+                <li><a href="#">회사소개</a></li>
+                <li><a href="#">제품소개</a></li>
+                <li><a href="#">지속가능경영</a></li>
+                <li><a href="#">투자정보</a></li>
+                <li><a href="#">뉴스룸</a></li>
+                <li><a href="#">고객센터</a></li>
+              </ul>
+            </nav>
+
+            <div class="lang">
+              <a href="#" alt="kr"></a>
+              <button>
+                <i class="icon-menu-outline"></i>
+              </button>
+             </div>
+          </div>
+          </div>
+        </div>
+      </header>
+      <!-- 비주얼 -->
+      <section class="visual">
+        <div class="visual-inner">
+          <div class="visual-main">
+            <img src="/images/pc_section01_3.jpg" alt="이미지 배경" />
+            <img src="/images/pc_section02_3.jpg" alt="이미지 배경" />
+            <img src="/images/sec01_logo_3 (1).png" alt="로고" />
+
+            <div class="search"><input type="search" /></div>
+          </div>
+        </div>
+      </section>
             <!-- 슬라이더 -->
             <section class="slide">
                 <div class="slide-inner">
