cs 섹션 기초 레이아웃

--- a/index.html
+++ b/index.html
@@ -17,14 +17,31 @@
       <section class="notice"></section>
       <!-- 고객센터 및 FAQ-->
       <section class="cs">
-        <div class="cs-top">
-          <div class="top-email"></div>
-          <div class="top-call"></div>
-        </div>
-        <div class="cs-bottom">
-          <div class="faq">
-            <div class="faq-left"></div>
-            <div class="faq-right"></div>
+        <h4>고객문의 및 불편사항</h4>
+        <div class="cs-wrap">
+          <div class="cs-top">
+            <div class="top-email">
+              이메일 상담
+              <p>
+                빙그레에 궁금한 사항을 문의해 주세요. <br />
+                최대한 빠른 시일 내에 친절하게 답변 드리겠습니다.
+              </p>
+              <button>상담하기</button>
+              <img src="images/layout/sec04_backimg01.png" />
+            </div>
+            <div class="top-call">
+              전화 상담
+              <span>080.022.0056</span>
+              <span>월~금(공휴일 제외)</span>
+              <span>09:00~17:30</span>
+              <img src="images/layout/sec04_backimg02.png" />
+            </div>
+          </div>
+          <div class="cs-bottom">
+            <div class="faq">
+              <div class="faq-left"></div>
+              <div class="faq-right"></div>
+            </div>
           </div>
         </div>
       </section>
