cs 작업 진행중

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </section>
       <!-- 고객문의 -->
       <section class="cs">
-        <h4>고객문의 및 불편사항</h4>
+        <h3>고객문의 및 불편사항</h3>
         <div class="cs-wrap">
           <div class="cs-top">
             <div class="top-email">
@@ -180,8 +180,24 @@
           </div>
           <div class="cs-bottom">
             <div class="faq">
-              <div class="faq-left"></div>
-              <div class="faq-right"></div>
+              <h4>
+                자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담 바랍니다.
+              </h4>
+              <button>더보기</button>
+              <div class="faq-left">
+                <ul>
+                  <li>Q.아이스크림에는 왜 유통기한이 없나요?</li>
+                  <li>Q.제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
+                  <li>Q.유통기한과 소비기한의 차이점은 무엇인가요?</li>
+                </ul>
+              </div>
+              <div class="faq-right">
+                <ul>
+                  <li>Q.유통기한 경과 제품, 빙그레에서 처리해주나요?</li>
+                  <li>Q.빙그레 서체의 사용 범위를 알고 싶어요.</li>
+                  <li>Q.소비기한은 언제부터 시행하나요?</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
