이미지 태그 수정

--- a/index.html
+++ b/index.html
@@ -99,27 +99,33 @@
           <div class="slide-inner-top">
             <h3>행복한 빙그레의 맛!</h3>
             <div class="slide-inner-prevbtn">
-              <img src="images/prev_arrow.png" />
+              <img src="images/layout/prev_arrow.png" />
             </div>
             <div class="slide-inner-nextbtn">
-              <img src="images/next_arrow.png" />
+              <img src="images/layout/next_arrow.png" />
             </div>
             <ul class="slide-list">
               <li>
-                <img src="images/sec02_img01.png" /><a href="#">아이스크림</a>
+                <img src="images/item/sec02_img01.png" /><a href="#"
+                  >아이스크림</a
+                >
               </li>
               <li>
-                <img src="images/sec02_img02.png" /><a href="#">우유/치즈</a>
+                <img src="images/item/sec02_img02.png" /><a href="#"
+                  >우유/치즈</a
+                >
               </li>
               <li>
-                <img src="images/sec02_img03.png" /><a href="#">발효유</a>
-              </li>
-              <li><img src="images/sec02_img04.png" /><a href="#">커피</a></li>
-              <li>
-                <img src="./images/sec02_img06.png" /><a href="#">주스</a>
+                <img src="images/item/sec02_img03.png" /><a href="#">발효유</a>
               </li>
               <li>
-                <img src="./images/sec02_img05.png" /><a href="#">음료</a>
+                <img src="images/item/sec02_img04.png" /><a href="#">커피</a>
+              </li>
+              <li>
+                <img src="images/item/sec02_img06.png" /><a href="#">주스</a>
+              </li>
+              <li>
+                <img src="images/item/sec02_img05.png" /><a href="#">음료</a>
               </li>
             </ul>
           </div>
@@ -128,6 +134,7 @@
       <!-- 고객문의 -->
       <section class="cs">
         <h3>고객문의 및 불편사항</h3>
+        gogogo
         <div class="cs-wrap">
           <div class="cs-top">
             <div class="top-email">
