--- a/index.html
+++ b/index.html
@@ -1,215 +1,190 @@
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- SEO -->
-        <meta name="title" content="빙그레" />
-        <meta
-            name="description"
-            content="다양한 맛과 행복으로 모두 하나되는 세상"
-        />
-        <meta name="robots" content="noodp" />
-        <meta name="NaverBot" content="All" />
-        <meta name="NaverBot" content="index, follow" />
-        <meta name="Yeti" content="All" />
-        <meta name="Yeti" content="index, follow" />
-        <!-- Open Graph -->
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="빙그레" />
-        <meta
-            property="og:description"
-            content="다양한 맛과 행복으로 모두 하나되는 세상"
-        />
-        <meta property="og:url" content="https://www.bing.co.kr/" />
-        <meta
-            property="og:image"
-            content="http://bing.musign.net/img/main/og_img_binggrae.jpg"
-        />
-        <meta property="og:site_name" content="binggrae" />
-        <meta name="twitter:title" content="빙그레" />
-        <meta
-            name="twitter:description"
-            content="다양한 맛과 행복으로 모두 하나되는 세상"
-        />
-        <!-- favicon -->
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="images/icon/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="images/icon/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="images/icon/favicon-16x16.png"
-        />
-        <link rel="manifest" href="images/icon/site.webmanifest" />
-        <link
-            rel="mask-icon"
-            href="images/icon/safari-pinned-tab.svg"
-            color="#5bbad5"
-        />
-        <title>빙그레</title>
-        <!-- jQuery -->
-        <script
-            src="https://code.jquery.com/jquery-3.6.1.min.js"
-            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-            crossorigin="anonymous"
-        ></script>
-        <!--[if lt IE 9]>
-            <script src="js/html5shiv.js"></script>
-        <![endif]-->
-        <script src="js/prefixfree.min.js"></script>
-        <!-- Respose -->
-        <script src="js/respond.min.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- SEO -->
+    <meta name="title" content="빙그레" />
+    <meta
+      name="description"
+      content="다양한 맛과 행복으로 모두 하나되는 세상"
+    />
+    <meta name="robots" content="noodp" />
+    <meta name="NaverBot" content="All" />
+    <meta name="NaverBot" content="index, follow" />
+    <meta name="Yeti" content="All" />
+    <meta name="Yeti" content="index, follow" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="빙그레" />
+    <meta
+      property="og:description"
+      content="다양한 맛과 행복으로 모두 하나되는 세상"
+    />
+    <meta property="og:url" content="https://www.bing.co.kr/" />
+    <meta
+      property="og:image"
+      content="http://bing.musign.net/img/main/og_img_binggrae.jpg"
+    />
+    <meta property="og:site_name" content="binggrae" />
+    <meta name="twitter:title" content="빙그레" />
+    <meta
+      name="twitter:description"
+      content="다양한 맛과 행복으로 모두 하나되는 세상"
+    />
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/icon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/icon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="images/icon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="images/icon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <title>빙그레</title>
+    <!-- jQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+      crossorigin="anonymous"
+    ></script>
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <script src="js/prefixfree.min.js"></script>
+    <!-- Respose -->
+    <script src="js/respond.min.js"></script>
 
-        <link rel="stylesheet" href="css/normalize.css" />
-        <!-- fontello -->
-        <link rel="stylesheet" href="css/fontello/css/fontello.css" />
-        <!-- fontawsome -->
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
-        <link rel="stylesheet" href="css/main.css" />
-    </head>
-    <body>
-        <div class="wrap">
-            <!-- 상단 -->
-            <header class="header">
-                <div class="inner"></div>
-            </header>
-            <!-- 비주얼 -->
-            <section class="visual">
-                <div class="inner"></div>
-            </section>
-            <!-- 슬라이더 -->
-            <section class="slide">
-                <div class="slide-inner">
-                    <div class="slide-inner-top">
-                        <h3>행복한 빙그레의 맛!</h3>
-                        <div class="slide-inner-prevbtn">
-                            <img src="images/prev_arrow.png" />
-                        </div>
-                        <div class="slide-inner-nextbtn">
-                            <img src="images/next_arrow.png" />
-                        </div>
-                        <ul class="slide-list">
-                            <li>
-                                <img src="images/sec02_img01.png" /><a href="#"
-                                    >아이스크림</a
-                                >
-                            </li>
-                            <li>
-                                <img src="images/sec02_img02.png" /><a href="#"
-                                    >우유/치즈</a
-                                >
-                            </li>
-                            <li>
-                                <img src="images/sec02_img03.png" /><a href="#"
-                                    >발효유</a
-                                >
-                            </li>
-                            <li>
-                                <img src="images/sec02_img04.png" /><a href="#"
-                                    >커피</a
-                                >
-                            </li>
-                            <li>
-                                <img src="./images/sec02_img06.png" /><a
-                                    href="#"
-                                    >주스</a
-                                >
-                            </li>
-                            <li>
-                                <img src="./images/sec02_img05.png" /><a
-                                    href="#"
-                                    >음료</a
-                                >
-                            </li>
-                        </ul>
-                        <p>test 승현</p>
-                    </div>
-                </div>
-            </section>
-            <!-- 고객문의 -->
-            <section class="cs">
-                <h3>고객문의 및 불편사항</h3>
-                <div class="cs-wrap">
-                    <div class="cs-top">
-                        <div class="top-email">
-                            이메일 상담
-                            <p>
-                                빙그레에 궁금한 사항을 문의해 주세요. <br />
-                                최대한 빠른 시일 내에 친절하게 답변
-                                드리겠습니다.
-                            </p>
-                            <button>상담하기</button>
-                            <img src="images/layout/sec04_backimg01.png" />
-                        </div>
-                        <div class="top-call">
-                            전화 상담
-                            <span>080.022.0056</span>
-                            <span>월~금(공휴일 제외)</span>
-                            <span>09:00~17:30</span>
-                            <img src="images/layout/sec04_backimg02.png" />
-                        </div>
-                    </div>
-                    <div class="cs-bottom">
-                        <div class="faq">
-                            <h4>
-                                자주 묻는 질문에 내용이 없을 경우, 이메일 및
-                                전화 상담 바랍니다.
-                            </h4>
-                            <button>더보기</button>
-                            <div class="faq-left">
-                                <ul>
-                                    <li>
-                                        Q.아이스크림에는 왜 유통기한이 없나요?
-                                    </li>
-                                    <li>
-                                        Q.제품 유통기한 뒤에 있는 알파벳 기호는
-                                        무엇인가요?
-                                    </li>
-                                    <li>
-                                        Q.유통기한과 소비기한의 차이점은
-                                        무엇인가요?
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="faq-right">
-                                <ul>
-                                    <li>
-                                        Q.유통기한 경과 제품, 빙그레에서
-                                        처리해주나요?
-                                    </li>
-                                    <li>
-                                        Q.빙그레 서체의 사용 범위를 알고 싶어요.
-                                    </li>
-                                    <li>Q.소비기한은 언제부터 시행하나요?</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- 제보 -->
-            <section class="report"></section>
-            <!-- 하단 -->
-            <footer class="footer">
-                <div class="inner"></div>
-            </footer>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- fontello -->
+    <link rel="stylesheet" href="css/fontello/css/fontello.css" />
+    <!-- fontawsome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="wrap">
+      <!-- 상단 -->
+      <header class="header">
+        <div class="inner"></div>
+      </header>
+      <!-- 비주얼 -->
+      <section class="visual">
+        <div class="inner"></div>
+      </section>
+      <!-- 슬라이더 -->
+      <section class="slide">
+        <div class="slide-inner">
+          <div class="slide-inner-top">
+            <h3>행복한 빙그레의 맛!</h3>
+            <div class="slide-inner-prevbtn">
+              <img src="images/layout/prev_arrow.png" />
+            </div>
+            <div class="slide-inner-nextbtn">
+              <img src="images/layout/next_arrow.png" />
+            </div>
+            <ul class="slide-list">
+              <li>
+                <img src="images/item/sec02_img01.png" /><a href="#"
+                  >아이스크림</a
+                >
+              </li>
+              <li>
+                <img src="images/item/sec02_img02.png" /><a href="#"
+                  >우유/치즈</a
+                >
+              </li>
+              <li>
+                <img src="images/item/sec02_img03.png" /><a href="#">발효유</a>
+              </li>
+              <li>
+                <img src="images/item/sec02_img04.png" /><a href="#">커피</a>
+              </li>
+              <li>
+                <img src="images/item/sec02_img06.png" /><a href="#">주스</a>
+              </li>
+              <li>
+                <img src="images/item/sec02_img05.png" /><a href="#">음료</a>
+              </li>
+            </ul>
+            <p>test 승현</p>
+          </div>
         </div>
-    </body>
-    >>>>>>> 2e41374a8e14d642567cb2ad9d988766d9211bbc
+      </section>
+      <!-- 고객문의 -->
+      <section class="cs">
+        <h3>고객문의 및 불편사항</h3>
+        <div class="cs-wrap">
+          <div class="cs-top">
+            <div class="top-email">
+              이메일 상담
+              <p>
+                빙그레에 궁금한 사항을 문의해 주세요. <br />
+                최대한 빠른 시일 내에 친절하게 답변 드리겠습니다.
+              </p>
+              <a href="#">상담하기</a>
+              <img src="images/layout/sec04_backimg01.png" />
+            </div>
+            <div class="top-call">
+              전화 상담
+              <span>080.022.0056</span>
+              <span>월~금(공휴일 제외)</span>
+              <span>09:00~17:30</span>
+              <img src="images/layout/sec04_backimg02.png" />
+            </div>
+          </div>
+          <div class="cs-bottom">
+            <div class="faq">
+              <h4>
+                자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담 바랍니다.
+              </h4>
+              <button>더보기</button>
+              <div class="faq-left">
+                <ul>
+                  <li>Q.아이스크림에는 왜 유통기한이 없나요?</li>
+                  <li>Q.제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
+                  <li>Q.유통기한과 소비기한의 차이점은 무엇인가요?</li>
+                </ul>
+              </div>
+              <div class="faq-right">
+                <ul>
+                  <li>Q.유통기한 경과 제품, 빙그레에서 처리해주나요?</li>
+                  <li>Q.빙그레 서체의 사용 범위를 알고 싶어요.</li>
+                  <li>Q.소비기한은 언제부터 시행하나요?</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- 제보 -->
+      <section class="report"></section>
+      <!-- 하단 -->
+      <footer class="footer">
+        <div class="inner"></div>
+      </footer>
+    </div>
+  </body>
+  >>>>>>> 2e41374a8e14d642567cb2ad9d988766d9211bbc
 </html>
