--- a/index.html
+++ b/index.html
@@ -99,47 +99,49 @@
                     <div class="slide-inner-top">
                         <h3>행복한 빙그레의 맛!</h3>
                         <div class="slide-inner-prevbtn">
-                            <img src="images/prev_arrow.png" />
+                            <img src="images/layout/prev_arrow.png" />
                         </div>
                         <div class="slide-inner-nextbtn">
-                            <img src="images/next_arrow.png" />
+                            <img src="images/layout/next_arrow.png" />
                         </div>
                         <ul class="slide-list">
                             <li>
-                                <img src="images/sec02_img01.png" /><a href="#"
+                                <img src="images/item/sec02_img01.png" /><a
+                                    href="#"
                                     >아이스크림</a
                                 >
                             </li>
                             <li>
-                                <img src="images/sec02_img02.png" /><a href="#"
+                                <img src="images/item/sec02_img01.png" /><a
+                                    href="#"
                                     >우유/치즈</a
                                 >
                             </li>
                             <li>
-                                <img src="images/sec02_img03.png" /><a href="#"
+                                <img src="images/item/sec02_img01.png" /><a
+                                    href="#"
                                     >발효유</a
                                 >
                             </li>
                             <li>
-                                <img src="images/sec02_img04.png" /><a href="#"
+                                <img src="images/item/sec02_img01.png" /><a
+                                    href="#"
                                     >커피</a
                                 >
                             </li>
                             <li>
-                                <img src="./images/sec02_img06.png" /><a
+                                <img src="images/item/sec02_img01.png" /><a
                                     href="#"
                                     >주스</a
                                 >
                             </li>
                             <li>
-                                <img src="./images/sec02_img05.png" /><a
+                                <img src="images/item/sec02_img01.png" /><a
                                     href="#"
                                     >음료</a
                                 >
                             </li>
                         </ul>
-                        <p>test 승현</p>
-                        <p>test 승현2</p>
                     </div>
                 </div>
             </section>
