CS 작업 진행중

--- a/index.html
+++ b/index.html
@@ -144,35 +144,40 @@
                 최대한 빠른 시일 내에 친절하게 답변 드리겠습니다.
               </p>
               <a href="#">상담하기</a>
-              <img src="images/layout/sec04_backimg01.png" />
             </div>
             <div class="top-call">
               전화 상담
               <span>080.022.0056</span>
               <span>월~금(공휴일 제외)</span>
               <span>09:00~17:30</span>
-              <img src="images/layout/sec04_backimg02.png" />
             </div>
           </div>
           <div class="cs-bottom">
             <div class="faq">
               <h4>
-                자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담 바랍니다.
+                <span
+                  >자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담
+                  바랍니다.</span
+                >
+                <a href="#">더보기</a>
               </h4>
-              <button>더보기</button>
-              <div class="faq-left">
-                <ul>
-                  <li>Q.아이스크림에는 왜 유통기한이 없나요?</li>
-                  <li>Q.제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
-                  <li>Q.유통기한과 소비기한의 차이점은 무엇인가요?</li>
-                </ul>
-              </div>
-              <div class="faq-right">
-                <ul>
-                  <li>Q.유통기한 경과 제품, 빙그레에서 처리해주나요?</li>
-                  <li>Q.빙그레 서체의 사용 범위를 알고 싶어요.</li>
-                  <li>Q.소비기한은 언제부터 시행하나요?</li>
-                </ul>
+              <div class="faq-wrap">
+                <div class="faq-left">
+                  <ul>
+                    <li>
+                      <a href="">Q.아이스크림에는 왜 유통기한이 없나요?</a>
+                    </li>
+                    <li>Q.제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
+                    <li>Q.유통기한과 소비기한의 차이점은 무엇인가요?</li>
+                  </ul>
+                </div>
+                <div class="faq-right">
+                  <ul>
+                    <li>Q.유통기한 경과 제품, 빙그레에서 처리해주나요?</li>
+                    <li>Q.빙그레 서체의 사용 범위를 알고 싶어요.</li>
+                    <li>Q.소비기한은 언제부터 시행하나요?</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
