브랜드 scss 파일 삭제 및 faq 작업 중

--- a/index.html
+++ b/index.html
@@ -184,7 +184,23 @@
         </div>
       </section>
       <!-- 제보 -->
-      <section class="report"></section>
+      <section class="report">
+        <div class="report-wrap">
+          <h4>빙그레 임직원 및 종사자 온라인제보</h4>
+          <div class="report-left">
+            <a href="#"
+              >빙그레 임직원의 부당한 요구 또는 업무 처리, 기타 부정행위 제보</a
+            >
+            <span><a href="#">사이버 부정 신고</a></span>
+          </div>
+          <div class="report-right">
+            <a href="#"
+              >빙그레 종사자의 유해·위험요소 및 안전·보건에 관한 의견 제보</a
+            >
+            <span><a href="#">안전신문고</a></span>
+          </div>
+        </div>
+      </section>
       <!-- 하단 -->
       <footer class="footer">
         <div class="inner"></div>
