--- a/index.html
+++ b/index.html
@@ -1,74 +1,74 @@
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- SEO -->
-        <meta name="title" content="빙그레" />
-        <meta
-            name="description"
-            content="다양한 맛과 행복으로 모두 하나되는 세상"
-        />
-        <meta name="robots" content="noodp" />
-        <meta name="NaverBot" content="All" />
-        <meta name="NaverBot" content="index, follow" />
-        <meta name="Yeti" content="All" />
-        <meta name="Yeti" content="index, follow" />
-        <!-- Open Graph -->
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="빙그레" />
-        <meta
-            property="og:description"
-            content="다양한 맛과 행복으로 모두 하나되는 세상"
-        />
-        <meta property="og:url" content="https://www.bing.co.kr/" />
-        <meta
-            property="og:image"
-            content="http://bing.musign.net/img/main/og_img_binggrae.jpg"
-        />
-        <meta property="og:site_name" content="binggrae" />
-        <meta name="twitter:title" content="빙그레" />
-        <meta
-            name="twitter:description"
-            content="다양한 맛과 행복으로 모두 하나되는 세상"
-        />
-        <!-- favicon -->
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="images/icon/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="images/icon/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="images/icon/favicon-16x16.png"
-        />
-        <link rel="manifest" href="images/icon/site.webmanifest" />
-        <link
-            rel="mask-icon"
-            href="images/icon/safari-pinned-tab.svg"
-            color="#5bbad5"
-        />
-        <title>빙그레</title>
-        <!-- jQuery -->
-        <script
-            src="https://code.jquery.com/jquery-3.6.1.min.js"
-            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-            crossorigin="anonymous"
-        ></script>
-        <!--[if lt IE 9]>
-            <script src="js/html5shiv.js"></script>
-        <![endif]-->
-        <script src="js/prefixfree.min.js"></script>
-        <!-- Respose -->
-        <script src="js/respond.min.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- SEO -->
+    <meta name="title" content="빙그레" />
+    <meta
+      name="description"
+      content="다양한 맛과 행복으로 모두 하나되는 세상"
+    />
+    <meta name="robots" content="noodp" />
+    <meta name="NaverBot" content="All" />
+    <meta name="NaverBot" content="index, follow" />
+    <meta name="Yeti" content="All" />
+    <meta name="Yeti" content="index, follow" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="빙그레" />
+    <meta
+      property="og:description"
+      content="다양한 맛과 행복으로 모두 하나되는 세상"
+    />
+    <meta property="og:url" content="https://www.bing.co.kr/" />
+    <meta
+      property="og:image"
+      content="http://bing.musign.net/img/main/og_img_binggrae.jpg"
+    />
+    <meta property="og:site_name" content="binggrae" />
+    <meta name="twitter:title" content="빙그레" />
+    <meta
+      name="twitter:description"
+      content="다양한 맛과 행복으로 모두 하나되는 세상"
+    />
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/icon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/icon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="images/icon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="images/icon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <title>빙그레</title>
+    <!-- jQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+      crossorigin="anonymous"
+    ></script>
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <script src="js/prefixfree.min.js"></script>
+    <!-- Respose -->
+    <script src="js/respond.min.js"></script>
 
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- fontello -->
@@ -138,7 +138,7 @@
         <div class="cs-wrap">
           <div class="cs-top">
             <div class="top-email">
-              이메일 상담
+              <h4>이메일 상담</h4>
               <p>
                 빙그레에 궁금한 사항을 문의해 주세요. <br />
                 최대한 빠른 시일 내에 친절하게 답변 드리겠습니다.
@@ -146,8 +146,8 @@
               <a href="#">상담하기</a>
             </div>
             <div class="top-call">
-              전화 상담
-              <span>080.022.0056</span>
+              <h4>전화 상담</h4>
+              <p>080.022.0056</p>
               <span>월~금(공휴일 제외)</span>
               <span>09:00~17:30</span>
             </div>
