--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
             <div class="top-call">
               <h4>전화 상담</h4>
               <p>080.022.0056</p>
-              <span>월~금(공휴일 제외)</span>
-              <span>09:00~17:30</span>
+              <p class="time">
+                <span>월~금(공휴일 제외)</span>
+                <span>09:00~17:30</span>
+              </p>
             </div>
           </div>
           <div class="cs-bottom">
