--- a/index.html
+++ b/index.html
@@ -143,13 +143,15 @@
                 빙그레에 궁금한 사항을 문의해 주세요. <br />
                 최대한 빠른 시일 내에 친절하게 답변 드리겠습니다.
               </p>
-              <a href="#">상담하기</a>
+              <span class="advice">
+                <a href="#">상담하기</a>
+              </span>
             </div>
             <div class="top-call">
               <h4>전화 상담</h4>
-              <p>080.022.0056</p>
+              <p class="tel">080.022.0056</p>
               <p class="time">
-                <span>월~금(공휴일 제외)</span>
+                월~금(공휴일 제외)
                 <span>09:00~17:30</span>
               </p>
             </div>
@@ -157,27 +159,43 @@
           <div class="cs-bottom">
             <div class="faq">
               <h4>
-                <span
-                  >자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담
-                  바랍니다.</span
-                >
+                <span class="faq-title">
+                  자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담
+                  바랍니다.
+                </span>
                 <a href="#">더보기</a>
               </h4>
               <div class="faq-wrap">
                 <div class="faq-left">
                   <ul>
                     <li>
-                      <a href="">Q.아이스크림에는 왜 유통기한이 없나요?</a>
+                      <a href="#">Q.아이스크림에는 왜 유통기한이 없나요?</a>
                     </li>
-                    <li>Q.제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
-                    <li>Q.유통기한과 소비기한의 차이점은 무엇인가요?</li>
+                    <li>
+                      <a href="#">
+                        Q.제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#">
+                        Q.유통기한과 소비기한의 차이점은 무엇인가요?
+                      </a>
+                    </li>
                   </ul>
                 </div>
                 <div class="faq-right">
                   <ul>
-                    <li>Q.유통기한 경과 제품, 빙그레에서 처리해주나요?</li>
-                    <li>Q.빙그레 서체의 사용 범위를 알고 싶어요.</li>
-                    <li>Q.소비기한은 언제부터 시행하나요?</li>
+                    <li>
+                      <a href="">
+                        Q.유통기한 경과 제품, 빙그레에서 처리해주나요?
+                      </a>
+                    </li>
+                    <li>
+                      <a href=""> Q.빙그레 서체의 사용 범위를 알고 싶어요.</a>
+                    </li>
+                    <li>
+                      <a href=""> Q.소비기한은 언제부터 시행하나요?</a>
+                    </li>
                   </ul>
                 </div>
               </div>
