--- a/index.html
+++ b/index.html
@@ -276,31 +276,31 @@
                                 >
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
+                                <img src="images/item/sec02_img02.png" /><a
                                     href="#"
                                     >우유/치즈</a
                                 >
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
+                                <img src="images/item/sec02_img03.png" /><a
                                     href="#"
                                     >발효유</a
                                 >
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
+                                <img src="images/item/sec02_img04.png" /><a
                                     href="#"
                                     >커피</a
                                 >
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
+                                <img src="images/item/sec02_img06.png" /><a
                                     href="#"
                                     >주스</a
                                 >
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
+                                <img src="images/item/sec02_img05.png" /><a
                                     href="#"
                                     >음료</a
                                 >
@@ -308,7 +308,7 @@
                         </ul>
                     </div>
                     <div class="slide-inner-bottom">
-                        <h3>행복한 빙그레의 맛!</h3>
+                        <h3>BRAND SHOP</h3>
                         <div class="slide-inner-prevbtn">
                             <img src="images/layout/prev_arrow.png" />
                         </div>
@@ -317,40 +317,22 @@
                         </div>
                         <ul class="slide-list">
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
-                                    href="#"
-                                    >아이스크림</a
-                                >
+                                <img src="images/layout/sec02_logo01.png" />
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
-                                    href="#"
-                                    >우유/치즈</a
-                                >
+                                <img src="images/layout/sec02_logo02.png" />
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
-                                    href="#"
-                                    >발효유</a
-                                >
+                                <img src="images/layout/sec02_logo03.png" />
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
-                                    href="#"
-                                    >커피</a
-                                >
+                                <img src="images/layout/sec02_logo04.png" />
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
-                                    href="#"
-                                    >주스</a
-                                >
+                                <img src="images/layout/sec02_logo05.png" />
                             </li>
                             <li>
-                                <img src="images/item/sec02_img01.png" /><a
-                                    href="#"
-                                    >음료</a
-                                >
+                                <img src="images/layout/sec02_logo06.png" />
                             </li>
                         </ul>
                     </div>
