--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="/css/main.css" />
+        <script src="js/main.js" defer></script>
     </head>
     <body>
         <div class="wrap">
@@ -269,39 +270,45 @@
                             <img src="images/layout/next_arrow.png" />
                         </div>
                         <ul class="slide-list">
-                            <li>
+                            <li class="view-start">
                                 <img src="images/item/sec02_img01.png" /><a
                                     href="#"
+                                    class="view"
                                     >아이스크림</a
                                 >
                             </li>
-                            <li>
+                            <li class="view-start">
                                 <img src="images/item/sec02_img02.png" /><a
                                     href="#"
+                                    class="view"
                                     >우유/치즈</a
                                 >
                             </li>
-                            <li>
+                            <li class="view-start">
                                 <img src="images/item/sec02_img03.png" /><a
                                     href="#"
+                                    class="view"
                                     >발효유</a
                                 >
                             </li>
-                            <li>
+                            <li class="view-start">
                                 <img src="images/item/sec02_img04.png" /><a
                                     href="#"
+                                    class="view"
                                     >커피</a
                                 >
                             </li>
-                            <li>
+                            <li class="view-start">
                                 <img src="images/item/sec02_img06.png" /><a
                                     href="#"
+                                    class="view"
                                     >주스</a
                                 >
                             </li>
-                            <li>
+                            <li class="view-start">
                                 <img src="images/item/sec02_img05.png" /><a
                                     href="#"
+                                    class="view"
                                     >음료</a
                                 >
                             </li>
